fix(rsmodals): made modal not stretch to the bottom when viewport > mobile (#1804)

--- a/src/components/RSModal/rsmodals.scss
+++ b/src/components/RSModal/rsmodals.scss
@@ -9,6 +9,7 @@
     width: 100vw;
   }
   @include cudl-breakpoint(tablet) {
+    height: auto;
     margin: 10vh auto;
     max-height: 80vh;
     width: 425px;
